# kachaka-api

./: .clang-format  .cmake-format.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.ros2  LICENSE  README.md  install.sh  pyproject.toml
.flexci/: buildkitd.toml  config.pbtxt  env.sh  generate-bake.sh  launcher.sh  lint.sh  pyproject.toml  script.sh
.github/: CODEOWNERS
.github/workflows/: lint.yaml
docs/: API.md  FEATURES.md  GENERAL.md  GRPC.md  KachakaErrorCode.json  LINT.md  PLAYGROUND.md  PYTHON.md  QUICKSTART.md  ROS2.md  WEB.md  kachaka_api_client.ipynb  kachaka_api_client_async.ipynb  kachaka_api_features.md
docs/api/: ERROR_HANDLING.md  SHELF_HANDLING.md  shelf_handling.md
flutter/demos/kachaka_api_flutter_sample/: README.md  analysis_options.yaml  pubspec.yaml
flutter/demos/kachaka_api_flutter_sample/lib/: app.dart  main.dart
flutter/demos/kachaka_api_flutter_sample/linux/: CMakeLists.txt  my_application.cc
protos/: kachaka-api.proto
python/demos/: README.md  README_SMART_SPEAKER.md  command_gui.ipynb  emergency_stop.py  error_code.ipynb  export_current_map.py  feature_matching.ipynb  follow_path.ipynb  get_front_camera.ipynb  get_front_camera_continuous.ipynb  get_front_camera_raw.ipynb  get_imu.ipynb  get_laser_scan.ipynb  get_map.ipynb  get_object_detection.ipynb  http_server.ipynb  import_map.py  install_libraries.ipynb  kachaka_api_client.ipynb  kachaka_api_client_async.ipynb  plot_map_robot_lidar.ipynb  qrcode.ipynb  requirements.txt  robot_pose.ipynb  run_custom_object_detection.ipynb  sample_llm_speak.py  save_object_detection_features.ipynb  setup_demo_env.py  smart_speaker.py  speak.ipynb  switch_map.ipynb  teleop.ipynb  template.ipynb  undistort.ipynb  url_kachaka_api.ipynb
python/demos/grpc/: set_auto_homing_enabled.py
python/demos/grpc_samples/: README.md  export_map_api_client.py  get_locations.py  get_map_list.py  import_map_api_client.py  move_to_location.py  sample_getter.py  time_signal.py
python/kachaka_api/: __init__.py  base.py  command_util.py  geometry_util.py  layout_util.py
python/kachaka_api/aio/: __init__.py  api.txt  base.py
python/kachaka_api/util/: command.py  geometry.py  layout.py  vision.py
ros2/demos/kachaka_follow/: README.md  package.xml  setup.cfg  setup.py
ros2/demos/kachaka_follow/kachaka_follow/: follow.py
ros2/demos/kachaka_nav2_bringup/: CMakeLists.txt  package.xml
ros2/demos/kachaka_rmf_demos/: CMakeLists.txt  package.xml
ros2/demos/kachaka_rmf_demos/config/: kachaka-youtalk.building.yaml  kachaka-youtalk.world  youtalk.rviz
ros2/demos/kachaka_rmf_demos/config/kachaka-youtalk/: model.config  model.sdf
ros2/demos/kachaka_rmf_demos/config/kachaka-youtalk_youtalk/: model.config  model.sdf
ros2/demos/kachaka_rmf_demos/config/kachaka-youtalk_youtalk/meshes/: wall_1.mtl
ros2/demos/kachaka_rmf_demos/config/nav_graphs/: 0.yaml  2.yaml
ros2/demos/kachaka_rmf_demos/launch/: common.launch.xml  simulation.launch.xml  youtalk.launch.xml
ros2/demos/kachaka_smart_speaker/: README.md  package.xml  setup.cfg  setup.py
ros2/demos/kachaka_speak/: README.md  package.xml  setup.cfg  setup.py
ros2/demos/kachaka_vision/: CMakeLists.txt  README.md  package.xml
ros2/demos/kachaka_vision/launch/: hand_recognition_launch.py
ros2/demos/kachaka_vision/src/: hand_recognition_node.cpp
ros2/kachaka_description/: CMakeLists.txt  package.xml  pyproject.toml
ros2/kachaka_description/config/: display.rviz  kachaka.rviz
ros2/kachaka_description/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/kachaka_description/launch/: robot_description.launch.py  robot_description.launch.xml  robot_display.launch.xml
ros2/kachaka_description/meshes/kachaka/: body.stl  left_tire.stl  right_tire.stl  solenoid.stl  tire.stl
ros2/kachaka_description/robot/: _kachaka.urdf.xacro  kachaka.urdf  kachaka.urdf.xacro
ros2/kachaka_description/urdf/: _kachaka.urdf.xacro  _materials.urdf.xacro  _values.urdf.xacro
ros2/kachaka_grpc_ros2_bridge/: .gitignore  CMakeLists.txt  package.xml  pyproject.toml
ros2/kachaka_grpc_ros2_bridge/launch/: grpc_ros2_bridge.launch.xml  grpc_ros2_bridge_no_state.launch.xml
ros2/kachaka_grpc_ros2_bridge/src/: camera_bridge.hpp  dynamic_tf_bridge.cpp  dynamic_tf_bridge.hpp  error_code.hpp  grpc_bridge.hpp  ros2_topic_bridge.hpp  stub_util.cpp  stub_util.hpp
ros2/kachaka_grpc_ros2_bridge/src/component/: auto_homing_component.cpp  back_camera_component.cpp  camera_component.cpp  diagnostics_component.cpp  dynamic_tf_component.cpp  front_camera_component.cpp  goal_pose_component.cpp  imu_component.cpp  kachaka_command_component.cpp  layout_component.cpp  lidar_component.cpp  manual_control_component.cpp  mapping_component.cpp  object_detection_component.cpp  odometry_component.cpp  robot_info_component.cpp  static_tf_component.cpp  tf_component.cpp  tof_camera_component.cpp  torch_component.cpp  wheel_odometry_component.cpp
ros2/kachaka_grpc_ros2_bridge/src/converter/: kachaka_command.cpp  kachaka_command.hpp  ros_header.cpp  ros_header.hpp
ros2/kachaka_interfaces/: CMakeLists.txt  package.xml  pyproject.toml
ros2/kachaka_interfaces/action/: ExecKachakaCommand.action
ros2/kachaka_interfaces/msg/: KachakaCommand.msg  Location.msg  LocationList.msg  ObjectDetection.msg  ObjectDetectionListStamped.msg  Shelf.msg  ShelfList.msg  ShelfSize.msg
tools/: export_current_map.py  generate_proto_for_ros2.sh  import_map.py  sync_from_robot.sh  sync_to_robot.sh  update_docker_images.sh  update_kachaka_api_base.py  update_kachaka_api_generated.sh
tools/gen_proto/: Dockerfile  entrypoint.sh  pyproject.toml  python_entrypoint.sh
tools/gen_proto/ros2/: Dockerfile  entrypoint.sh
tools/lint/: Dockerfile  local_run.sh  requirements.txt  run_docker.sh
tools/ros2_bridge/: .env  docker-compose.yaml  env.sh  start_bridge.sh
tools/web_proxy/: .gitignore  docker-compose.yaml  envoy.yaml.in  start_proxy.sh
web/demos/kachaka_api_web_sample/: .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+72 files in other folders)
