[project]
name = "kachaka-api"
version = "1.0.0"
authors = [{name="Preferred Robotics inc."}]
dependencies = ["grpcio", "numpy", "protobuf"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/pf-robotics/kachaka-api"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.pysen]
version = "0.10.5"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 80

[tool.pysen.lint.source]
excludes = [
  ".flexci/env.sh",
  "python/kachaka_api/generated",
]

[tool.pysen.plugin.clang_format]
function = "pysen_plugins::clang_format"

[tool.pysen.plugin.clang_format.config]
extensions = [".cc", ".cpp", ".h", ".hpp"]
command = ["clang-format-15"]

[tool.pysen.plugin.cmake_format]
function = "pysen_plugins::cmake_format"

[tool.pysen.plugin.shellcheck]
function = "pysen_plugins::shellcheck"
