[project]
name = "kachaka-api"
version = "3.10.6"
authors = [{name="Preferred Robotics inc."}]
dependencies = [
    "grpcio==1.66.1",
    "numpy>=2.2.0",
    "protobuf>=5.27.2",
]


readme = "README.md"

[project.urls]
Repository = "https://github.com/pf-robotics/kachaka-api"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.mypy]
files = [
    "python/kachaka_api/base.py",
    "python/kachaka_api/aio/",
    "python/kachaka_api/util/",
    "python/demos/sample_llm_speak.py",
]
ignore_missing_imports = true

[tool.pysen]
version = "0.10.5"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 80
py_version = "py310"

[tool.pysen.lint.source]
excludes = [
  ".flexci/env.sh",
  "python/kachaka_api/generated",
]

[tool.pysen.plugin.clang_format]
function = "pysen_plugins::clang_format"

[tool.pysen.plugin.clang_format.config]
extensions = [".cc", ".cpp", ".h", ".hpp"]

[tool.pysen.plugin.cmake_format]
function = "pysen_plugins::cmake_format"

[tool.pysen.plugin.shellcheck]
function = "pysen_plugins::shellcheck"
