<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kachaka_vision</name>
  <version>0.0.0</version>
  <description>ROS2 vision sample</description>
  <maintainer email="support@kachaka.life">Kachaka Customer Support</maintainer>
  <license>Apache License 2.0</license>
  <author email="support@kachaka.life">Kachaka Customer Support</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
